# jump-to-fastapi

./: .gitignore  README.md  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.svelte
myapi/: alembic.ini  database.py  main.py  myapi.db
myapi/migrations/versions/: 8f1918ccf95f_.py
