[tool.poetry]
name = "jump-to-fastapi"
version = "0.1.0"
description = "A demo project following wikidoc-'Jump to FastAPI'(https://wikidocs.net/book/8531)"
authors = ["Mattdony <dev.mattdony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
